Atualização para Spring Boot 2.7 e Java 17